[tool.poetry]
name = "keithfem_bot"
version = "0.1.0"
description = "A bot for www.keithfem.com telegram group chat that displays the schedule of the radio shows."
authors = ["Lautaro Mazzitelli <lmazzitelli@gmail.com>"]
license = "Attribution-NonCommercial-ShareAlike. CC BY-NC-SA"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
python-telegram-bot = "^13.1"
pytest-cov = "4.0.0"
cryptography = "^36.0.2"
pytest = "^7.2.0"
mypy = "^1.1"
types-requests = "^2.28.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
freezegun = "^1.2.1"
coveralls = "^3.3.1"
isort = "^5.9.1"
flake8 = "^6.0.0"
black = "^23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
