[tool.poetry]
name = "keithfem_bot"
version = "0.1.0"
description = "A bot for www.keithfem.com telegram group chat that displays the schedule of the radio shows."
authors = ["Lautaro Mazzitelli <lmazzitelli@gmail.com>"]
license = "Attribution-NonCommercial-ShareAlike. CC BY-NC-SA"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-telegram-bot = "^13.1"
pytest-cov = "4.1.0"
cryptography = "^42.0.3"
pytest = "^7.4.3"
mypy = "^1.7"
types-requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
freezegun = "^1.2.1"
coveralls = "^3.3.1"
isort = "^5.9.1"
flake8 = "^6.1.0"
black = "^23.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
